# sp1-project-template

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: foundry-test.yml  prove.yml
contracts/: .gitignore  README.md
contracts/src/: Fibonacci.sol  Groth16Verifier.sol  SP1Verifier.sol
contracts/src/fixtures/: fixture.json  groth16-fixture.json  plonk-fixture.json
contracts/test/: Fibonacci.t.sol
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  build.rs
script/elf/: fibonacci-program
