[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
sp1-sdk = "2.0.0"
sp1-zkvm = "2.0.0"
sp1-helper = "2.0.0"
alloy-sol-types = "0.7.7"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"

fibonacci-lib = { path = "lib" }