[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "v2.0.0" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "v2.0.0" }
fibonacci-lib = { path = "../lib" }

[build-dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "v2.0.0" }