[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
fibonacci-lib = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }
